--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -1,9 +1,23 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-<head>
-	<title>Hello Coursera</title>
-</head>
-<body>
-<h1>Second document</h1>
-</body>
+	<head>
+		<meta charset="utf-8">
+			<title>Mod2Assignment</title>
+			<link rel="stylesheet" href="styles.css">
+	</head>
+	<body>
+		<h1>Our Menu</h1>
+		<section class="s1">
+		<section class="insideS1">Chicken</section>
+		<br>Place order for chicken
+	</section>
+		<section class="s2">
+			<section class="insideS2">Beef</section>
+			<br>Place order for beef
+		</section>
+	<section class="s3">
+		<section class="insideS3">Sushi</section>
+		<br>Place order for sushi
+	</section>
+	</body>
 </html>
