--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -9,15 +9,15 @@
 		<h1>Our Menu</h1>
 		<section class="s1">
 		<section class="insideS1">Chicken</section>
-		<br>Place order for chicken
+		<br>lorem ipsum dolor sit omet,consectetur adipisicing elit,sed doeiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
 	</section>
 		<section class="s2">
 			<section class="insideS2">Beef</section>
-			<br>Place order for beef
+			<br>lorem ipsum dolor sit omet,consectetur adipisicing elit,sed doeiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
 		</section>
 	<section class="s3">
 		<section class="insideS3">Sushi</section>
-		<br>Place order for sushi
+		<br>lorem ipsum dolor sit omet,consectetur adipisicing elit,sed doeiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
 	</section>
 	</body>
 </html>
