--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -7,38 +7,29 @@
     <title>Module-3-Assignment</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="styles.css"
-</head>
-<header>
-		<nav id="header-nav" class="navbar navbar-default">
-			<div class="container">
+    <link rel="stylesheet" href="styles.css">
+	<nav id="header-nav" class="navbar navbar-default">
+			<div class="container-fluid">
 			<div class="navbar-header">
-				<a href="index.html"><h1>Food,LLC</h1></a>				
- <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
+				<a href="index.html"><h1>Food,LLC</h1></a>
+				<div class="Menu">				
+<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
 			<span class="sr-only">Toggle Navigation</span>
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>				
 			</button>	
 		</div>
-		<div id="collapsable-nav" class="collapse navbar-collapse">
-			<ul id="nav-list" class="nav navbar-nav navbar-right">
-				<li>
-					<a href="#">
-						<span></span><br class="hidden-xs"></a>
-				</li>
-				<li>
-					<a href="#">
-						<span></span><br class="hidden-xs"></a>
-				</li>
-				<li>
-					<a href="#">
-						<span></span><br class="hidden-xs"></a>
-				</li>
-			</ul>
-		</div>
+    <div id="collapsable-nav" class="collapse navbar-collapse navbar-toggle">
+    	<ul id="nav-list" class="nav navbar-nav navbar-right">
+    		<div class="CH"><a href="#">Chicken</a></div>
+    		<div class="BE"><a href="#">Beef</a></div>
+    		<div class="SU"><a href="#">Sushi</a></div></ul>
+  </div>
+  </div>
+</div>
 		</nav>
-	</header>
+	</head>
 	<body>
 		<h1 class="text-center">Our Menu</h1>
 
